logs/udac_example_dag/Stage_events/2021-02-04T12:27:51.184199+00:00/1.log
[2021-02-04 14:28:01,083] {taskinstance.py:670} INFO - Dependencies all met for <TaskInstance: udac_example_dag.Stage_events 2021-02-04T12:27:51.184199+00:00 [queued]>
[2021-02-04 14:28:01,091] {taskinstance.py:670} INFO - Dependencies all met for <TaskInstance: udac_example_dag.Stage_events 2021-02-04T12:27:51.184199+00:00 [queued]>
[2021-02-04 14:28:01,091] {taskinstance.py:880} INFO - 
--------------------------------------------------------------------------------
[2021-02-04 14:28:01,091] {taskinstance.py:881} INFO - Starting attempt 1 of 4
[2021-02-04 14:28:01,091] {taskinstance.py:882} INFO - 
--------------------------------------------------------------------------------
[2021-02-04 14:28:01,095] {taskinstance.py:901} INFO - Executing <Task(StageToRedshiftOperator): Stage_events> on 2021-02-04T12:27:51.184199+00:00
[2021-02-04 14:28:01,104] {standard_task_runner.py:54} INFO - Started process 58412 to run task
[2021-02-04 14:28:01,143] {standard_task_runner.py:77} INFO - Running: ['airflow', 'run', 'udac_example_dag', 'Stage_events', '2021-02-04T12:27:51.184199+00:00', '--job_id', '181', '--pool', 'default_pool', '--raw', '-sd', 'DAGS_FOLDER/udac_example_dag.py', '--cfg_path', '/var/folders/ys/hb038j3904j77l4dkb4zk2ym0000gq/T/tmptf0yvf2s']
[2021-02-04 14:28:01,144] {standard_task_runner.py:78} INFO - Job 181: Subtask Stage_events
[2021-02-04 14:28:01,162] {logging_mixin.py:112} INFO - Running <TaskInstance: udac_example_dag.Stage_events 2021-02-04T12:27:51.184199+00:00 [running]> on host 1.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.0.ip6.arpa
[2021-02-04 14:28:01,178] {stage_redshift.py:56} INFO - StageToRedshiftOperator not implemented yet
[2021-02-04 14:28:01,242] {stage_redshift.py:61} INFO - Clearing data from destination Redshift table: staging_events
[2021-02-04 14:28:01,245] {base_hook.py:89} INFO - Using connection to: id: redshift. Host: redshift-cluster-airflow.ca3iipyjqhur.us-west-2.redshift.amazonaws.com, Port: 5439, Schema: dev, Login: awsuser, Password: XXXXXXXX, extra: None
[2021-02-04 14:28:02,586] {dbapi_hook.py:176} INFO - DELETE FROM staging_events IF EXISTS
[2021-02-04 14:28:02,959] {taskinstance.py:1150} ERROR - syntax error at or near "IF"
LINE 1: DELETE FROM staging_events IF EXISTS
                                   ^
Traceback (most recent call last):
  File "/usr/local/lib/python3.9/site-packages/airflow/models/taskinstance.py", line 984, in _run_raw_task
    result = task_copy.execute(context=context)
  File "/Users/trevorransom/Documents/01 Coding/03 Data Engineering/Udacity/05 Airflow/plugins/operators/stage_redshift.py", line 62, in execute
    redshift.run('DELETE FROM {} IF EXISTS'.format(self.table))
  File "/usr/local/lib/python3.9/site-packages/airflow/hooks/dbapi_hook.py", line 177, in run
    cur.execute(s)
psycopg2.errors.SyntaxError: syntax error at or near "IF"
LINE 1: DELETE FROM staging_events IF EXISTS
                                   ^

[2021-02-04 14:28:02,966] {taskinstance.py:1187} INFO - Marking task as UP_FOR_RETRY. dag_id=udac_example_dag, task_id=Stage_events, execution_date=20210204T122751, start_date=20210204T122801, end_date=20210204T122802
[2021-02-04 14:28:06,091] {local_task_job.py:102} INFO - Task exited with return code 1
